--- a/Client/Properties/launchSettings.json
+++ b/Client/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56743/",
+      "applicationUrl": "http://192.168.1.137:56743/",
       "sslPort": 44377
     }
   },
